k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callforge-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: callforge-frontend
  template:
    metadata:
      labels:
        app: callforge-frontend
    spec:
      containers:
      
        - name: frontend
          image: adenli/callforge-frontend:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
